Fix increment and decrement button size on mobile in bag app.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -778,3 +778,10 @@ footer.container {
  width: 70%;
 }
 }
+
+@media (max-width: 400px) {
+.input-group-prepend,
+.input-group-append {
+    display: none;
+}
+}
